Bug 319532 [gnome]There is no feedback when use keyboard to navigate disabled menuitem in Mozilla menu r+sr=roc