widget/src/xpwidgets/nsXPLookAndFeel.cpp
@@ -93,6 +93,7 @@ nsLookAndFeelIntPref nsXPLookAndFeel::sIntPrefs[] =
   { "ui.isScreenReaderActive", eMetric_IsScreenReaderActive, PR_FALSE, nsLookAndFeelTypeInt, 0 },
   { "ui.menusCanOverlapOSBar", eMetric_MenusCanOverlapOSBar,
     PR_FALSE, nsLookAndFeelTypeInt, 0 },
+  { "ui.skipNavigatingDisabledMenuItem", eMetric_SkipNavigatingDisabledMenuItem, PR_FALSE, nsLookAndFeelTypeInt, 0 },
   { "ui.treeOpenDelay",
     eMetric_TreeOpenDelay, PR_FALSE, nsLookAndFeelTypeInt, 0 },
   { "ui.treeCloseDelay",
